--- a/WebStore/Views/Products/ProductDetails.cshtml
+++ b/WebStore/Views/Products/ProductDetails.cshtml
@@ -46,7 +46,7 @@
                 <div id="imageGallery" class="carousel slide d-flex flex-column mb-3" style="margin-left: 30px; margin-right: 30px;">
 
                     <!-- The actual images (as slides) -->
-                    <div class="carousel-inner">
+                    <div class="carousel-inner" style="max-width: 500px; background-color: white;">
 
                         <div class="carousel-item active">
                             <img src="@Url.Action("GetImage", "Images", new {id = Model.ProductImages[0].ImageID, height = 500, width = 500})" class="d-block w-100 img-fluid" alt="Image 1">
