--- a/WebStore/Views/Shared/_Layout.cshtml
+++ b/WebStore/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 
     <!-- Bootstrap Font Icon CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    
+
     @Styles.Render("~/Content/css")
 
     <style>
@@ -85,9 +85,13 @@
         .dbg-5 {
             border: 1px solid purple !important;
         }
-
-
     </style>
+
+    <!-- jQuery JS -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
 
@@ -112,8 +116,6 @@
 
 
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
 
@@ -126,7 +128,7 @@
 
     </script>
 
-    
+
 
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
