--- a/WebStore/Views/Shared/_NavigationBar.cshtml
+++ b/WebStore/Views/Shared/_NavigationBar.cshtml
@@ -123,7 +123,10 @@
         </div>
 
         <!-- Group C: User -->
-        <div class="ng-user">
+        <div class="ng-user d-flex align-items-center">
+
+            <a href="@Url.Action("SavedList", "Users", new {userID = 1})" class="bi bi-bookmark-heart" style="margin-right: 15px; color: white; font-size: 2.5rem;" title="View Favourites"></a>
+
             <div class="dropdown">
                 <a href="#" role="button" id="userDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <!-- Migrate over to using GetImage - this file needs a model to reference the user's login session -->
@@ -133,7 +136,7 @@
                     <!-- Add dropdown items as needed -->
                     <li><a class="dropdown-item" href="@Url.Action("UserProfile", "Users", new { userID = 1 })">Profile</a></li>
                     <li><a class="dropdown-item" href="@Url.Action("Index", "Users")">View All Users</a></li>
-                    <li><a class="dropdown-item" href="#">Settings</a></li>
+                    <li><a class="dropdown-item" href="@Url.Action("SavedList", "Users", new {userID = 1})">Your Favourites</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="#" onclick="alert('Logging you out...')">Logout</a></li>
                 </ul>
